@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-13T16:07:47Z",
-  "count_outdated" : 610,
-  "uniques_outdated" : 123,
+  "timestamp" : "2022-09-16T08:08:48Z",
+  "count_outdated" : 611,
+  "uniques_outdated" : 124,
   "count" : 638,
   "uniques" : 128,
   "views" : [
-    {
-      "timestamp": "2022-09-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-05T00:00:00Z",
       "count": 1,
